--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,9 @@
-<h2>mes projets</h2>
+<div><h2>{{title}}</h2>
+<h2>{{projet.name}}</h2><br>
 
+<div><span> </span>{{projet.description}}</div>
 
+</div>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
