--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/']">
-  <h1>Mon porte-Folio</h1>
+  <h1>{{title2}}</h1>
 </a>
 
 <a class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
