--- a/src/styles.css
+++ b/src/styles.css
@@ -107,9 +107,10 @@ label {
 /* Top Bar */
 
 app-top-bar {
-  width: 100%;
+  width: 150%;
   height: 68px;
-  /* background-color: #1976d2; */
+  background-color: #1976d2;
+  
   padding: 16px;
   display: flex;
   flex-direction: row;
