--- a/src/styles.css
+++ b/src/styles.css
@@ -137,7 +137,9 @@ app-top-bar h1 {
   border-radius: 2px;
   background-color: #EEEEEE;
 }
-
+.projet1{
+ background-image: url('assets/artdeschoix.png')
+}
 
 /*
 Copyright Google LLC. All Rights Reserved.
